--- a/app/src/main/res/layout/actionbar.xml
+++ b/app/src/main/res/layout/actionbar.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#189FA1"
+
   >
 
     <LinearLayout
@@ -17,7 +18,7 @@
             android:layout_height="20dp"
             android:layout_marginLeft="10dp"
             android:layout_gravity="center"
-            android:background="@drawable/search_icon"
+            android:background="@drawable/ic_drawer"
             android:id="@+id/home_image" />
         <TextView
             android:layout_width="match_parent"
