--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,32 +1,34 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/head"
     android:layout_height="match_parent"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/container"
     android:background="@android:color/white"
     tools:context=".MainActivity">
-<RelativeLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:id="@+id/header_layout">
-        <TextView
-            android:id="@+id/header"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:background="@drawable/selectcity_history"
-            />
+    <include
+        android:id="@+id/toolbar_actionbar"
+        layout="@layout/actionbar"
+        android:visibility="visible"
+        android:layout_width="match_parent"
+        android:layout_height="50dp" />
+<FrameLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/container"
+    android:layout_below="@+id/toolbar_actionbar"
+    >
+
     <ListView
         android:id="@+id/city_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/header" >
+        android:layout_height="match_parent" >
     </ListView>
-</RelativeLayout>
+</FrameLayout>
 
 
     <com.google.android.gms.ads.AdView
-
+        android:layout_below="@+id/container"
         android:id="@+id/adView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -35,4 +37,4 @@
        android:layout_gravity="bottom"
         />
 
-</FrameLayout>
+</RelativeLayout>
