--- a/app/src/main/res/layout/blogs_detail_fragment.xml
+++ b/app/src/main/res/layout/blogs_detail_fragment.xml
@@ -16,8 +16,9 @@
         android:scrollbars="none"
         >
 
-        <RelativeLayout
+        <LinearLayout
             android:background="@android:color/white"
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <LinearLayout
@@ -45,7 +46,6 @@
                 <org.lucasr.twowayview.widget.TwoWayView
                     xmlns:app="http://schemas.android.com/apk/res-auto"
                     android:id="@+id/blog_list"
-                    android:layout_below="@+id/blog_pager"
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
                     style="@style/TwoWayView"
@@ -58,15 +58,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 ads:adSize="SMART_BANNER"
-                android:layout_below="@id/blog_lay"
-
                 ads:adUnitId="ca-app-pub-6939500014189035/5918151304">
             </com.google.android.gms.ads.AdView>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:layout_below="@+id/adView"
                 android:id="@+id/layout_disc"
                 android:layout_marginTop="5dp"
                 android:weightSum="4">
@@ -92,7 +89,6 @@
             </LinearLayout>
             <View
                 android:layout_width="match_parent"
-                android:layout_below="@id/layout_disc"
                 android:layout_height="match_parent"
                 android:padding="0.1dp"
                 android:layout_marginTop="15dp"
@@ -101,11 +97,29 @@
                 android:background="@drawable/line_history"/>
             <LinearLayout
                 android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/location_blogs_photosset"
+                android:orientation="vertical"
+                android:layout_marginTop="25dp">
+                <com.astuetz.PagerSlidingTabStrip
+                    android:id="@+id/blogs_tabs"
+                    android:layout_width="match_parent"
+                    android:layout_height="35dip"
+                    />
+                <android.support.v4.view.ViewPager
+                    android:id="@+id/blogs_pagerForList"
+                    android:layout_below="@+id/blogs_tabs"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"/>
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:id="@+id/location"
                 android:orientation="vertical"
-                android:layout_below="@+id/layout_disc"
                 android:layout_marginTop="25dp"
+                android:visibility="gone"
                 android:weightSum="2">
                 <TextView
                     android:layout_width="match_parent"
@@ -122,7 +136,7 @@
                 android:layout_height="170dp"
                 android:id="@+id/blog_layout_map"
                 android:orientation="vertical"
-                android:layout_below="@+id/location">
+                >
                 <fragment
                     android:id="@+id/blog_mapView"
                     android:layout_width="match_parent"
@@ -137,7 +151,7 @@
                 android:id="@+id/layout_type"
                 android:weightSum="2"
                 android:layout_marginTop="15dp"
-                android:layout_below="@+id/blog_layout_map">
+                >
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -154,7 +168,6 @@
             </LinearLayout>
             <View
                 android:layout_width="match_parent"
-                android:layout_below="@id/blog_type"
                 android:layout_height="match_parent"
                 android:padding="0.1dp"
                 android:layout_marginTop="5dp"
@@ -169,7 +182,7 @@
                 android:id="@+id/layout_added"
                 android:weightSum="2"
                 android:layout_marginTop="15dp"
-                android:layout_below="@+id/layout_type">
+                >
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -186,7 +199,6 @@
             </LinearLayout>
             <View
                 android:layout_width="match_parent"
-                android:layout_below="@id/layout_added"
                 android:layout_height="match_parent"
                 android:padding="0.1dp"
                 android:layout_marginTop="5dp"
@@ -201,7 +213,7 @@
                 android:id="@+id/layout_added_by"
                 android:weightSum="2"
                 android:layout_marginTop="15dp"
-                android:layout_below="@+id/layout_added">
+                >
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -218,7 +230,6 @@
             </LinearLayout>
             <View
                 android:layout_width="match_parent"
-                android:layout_below="@id/layout_added_by"
                 android:layout_height="match_parent"
                 android:padding="0.1dp"
                 android:id="@+id/view"
@@ -227,7 +238,7 @@
                 android:layout_marginRight="22dp"
                 android:background="@drawable/line_history"/>
 
-        </RelativeLayout>
+        </LinearLayout>
 
     </ScrollView>
 
