--- a/app/src/main/res/layout/events_detail_fragment.xml
+++ b/app/src/main/res/layout/events_detail_fragment.xml
@@ -16,11 +16,22 @@
         android:scrollbars="none"
          >
 
-        <RelativeLayout
+        <LinearLayout
             android:background="@android:color/white"
             android:layout_width="match_parent"
-
+            android:orientation="vertical"
             android:layout_height="match_parent">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="265dp"
+                android:id="@+id/lay"
+                android:orientation="vertical">
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="265dp"
+                android:id="@+id/events_imgLogo"
+                android:visibility="gone"
+                />
             <android.support.v4.view.ViewPager
                 android:id="@+id/event_pager"
                 android:layout_width="match_parent"
@@ -30,16 +41,16 @@
             <org.lucasr.twowayview.widget.TwoWayView
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/event_list"
-                android:layout_below="@+id/event_pager"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
 
                 style="@style/TwoWayView"
                 app:twowayview_layoutManager="ListLayoutManager"/>
+            </LinearLayout>
             <com.google.android.gms.ads.AdView
 
                 android:id="@+id/adView"
-                android:layout_below="@id/event_list"
+                android:layout_below="@id/lay"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 ads:adSize="SMART_BANNER"
@@ -47,11 +58,11 @@
                 ads:adUnitId="ca-app-pub-6939500014189035/5918151304">
 
             </com.google.android.gms.ads.AdView>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:layout_below="@+id/adView"
                 android:id="@+id/layout_disc"
                 android:layout_marginTop="5dp"
                 android:weightSum="4">
@@ -77,7 +88,6 @@
             </LinearLayout>
             <View
                 android:layout_width="match_parent"
-                android:layout_below="@id/layout_disc"
                 android:layout_height="match_parent"
                 android:padding="0.1dp"
                 android:layout_marginTop="15dp"
@@ -86,10 +96,27 @@
                 android:background="@drawable/line_history"/>
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:id="@+id/location"
+                android:layout_height="match_parent"
+                android:id="@+id/location_event_photosset"
                 android:orientation="vertical"
-                android:layout_below="@+id/layout_disc"
+                android:layout_marginTop="25dp">
+                <com.astuetz.PagerSlidingTabStrip
+                    android:id="@+id/people_tabs"
+                    android:layout_width="match_parent"
+                    android:layout_height="35dip"
+                    />
+                <android.support.v4.view.ViewPager
+                    android:id="@+id/places_pagerForList"
+                    android:layout_below="@+id/people_tabs"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"/>
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:id="@+id/location_events_photosset"
+                android:orientation="vertical"
                 android:layout_marginTop="25dp"
                 android:weightSum="2">
                 <TextView
@@ -107,7 +134,7 @@
                 android:layout_height="170dp"
                 android:id="@+id/event_layout_map"
                 android:orientation="vertical"
-                android:layout_below="@+id/location">
+                >
                 <fragment
                     android:id="@+id/event_mapView"
                     android:layout_width="match_parent"
@@ -121,7 +148,7 @@
                 android:id="@+id/layout_type"
                 android:weightSum="2"
                 android:layout_marginTop="15dp"
-                android:layout_below="@+id/event_layout_map">
+                >
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -138,7 +165,6 @@
             </LinearLayout>
             <View
                 android:layout_width="match_parent"
-                android:layout_below="@id/layout_type"
                 android:layout_height="match_parent"
                 android:padding="0.1dp"
                 android:layout_marginTop="5dp"
@@ -153,7 +179,7 @@
                 android:id="@+id/layout_added"
                 android:weightSum="2"
                 android:layout_marginTop="15dp"
-                android:layout_below="@+id/layout_type">
+                >
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -170,7 +196,6 @@
             </LinearLayout>
             <View
                 android:layout_width="match_parent"
-                android:layout_below="@id/layout_added"
                 android:layout_height="match_parent"
                 android:padding="0.1dp"
                 android:layout_marginTop="5dp"
@@ -185,7 +210,7 @@
                 android:id="@+id/layout_added_by"
                 android:weightSum="2"
                 android:layout_marginTop="15dp"
-                android:layout_below="@+id/layout_added">
+                >
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -202,7 +227,6 @@
             </LinearLayout>
             <View
                 android:layout_width="match_parent"
-                android:layout_below="@id/layout_added_by"
                 android:layout_height="match_parent"
                 android:padding="0.1dp"
                 android:id="@+id/view"
@@ -211,7 +235,7 @@
                 android:layout_marginRight="22dp"
                 android:background="@drawable/line_history"/>
 
-        </RelativeLayout>
+        </LinearLayout>
 
         </ScrollView>
 
