--- a/app/src/main/res/layout/photos_fragment.xml
+++ b/app/src/main/res/layout/photos_fragment.xml
@@ -13,7 +13,7 @@
         android:id="@+id/layout_grid"
         android:layout_below="@+id/total_results"
         android:layout_above="@+id/footer"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
         <GridView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
